Took a swing at trying to import a different config file in the installer, depending on what you give it, to use.

--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -39,7 +39,7 @@ $ROOT_PASS_IS_ENCRYPTED   = '<!-- tmpl_var ROOT_PASS_IS_ENCRYPTED -->';
 #
 # Backend Database Configuration: 
 
-$BACKEND_DB_TYPE = 'SQL'
+$BACKEND_DB_TYPE = 'SQL';
 
 %SQL_PARAMS = ( 
 
