s/Dada Bridge/Bridge/

--- a/dada/templates/plugins/bridge/edit_email_msgs.tmpl
+++ b/dada/templates/plugins/bridge/edit_email_msgs.tmpl
@@ -1,5 +1,5 @@
 
-	<!-- tmpl_set name="title" value="Dada Bridge &#187; Customize Email Messages" -->
+	<!-- tmpl_set name="title" value="Bridge &#187; Customize Email Messages" -->
 	<div id="screentitle"> 
 		<div id="screentitlepadding">
 			<!-- tmpl_var title --> 
