--- a/dada/templates/plugins/bridge/plugin_config.tmpl
+++ b/dada/templates/plugins/bridge/plugin_config.tmpl
@@ -1,5 +1,5 @@
 
-<!-- tmpl_set name="title" value="Dada Bridge &#187; Plugin Configuration" --> 
+<!-- tmpl_set name="title" value="Bridge &#187; Plugin Configuration" --> 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		<!-- tmpl_var title --> 
