Finishing up Bridge's Mail Forward feature.

--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -199,7 +199,7 @@ $PLUGIN_CONFIGS = {
 
 	},
 	
-	Dada_Bridge => {
+	Bridge => {
 
 		Plugin_Name                         => undef,
 		Plugin_URL                          => undef,
@@ -546,7 +546,7 @@ $ADMIN_MENU = [
 #					},
 
 #					{
-#					-Title      => 'Discussion Lists',
+#					-Title      => 'Bridge',
 #					-Title_URL  => $PLUGIN_URL."/bridge.cgi",
 #					-Function   => 'bridge',
 #					-Activated  => 1,
