--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -528,7 +528,7 @@ for it to work correctly. For help on setting the cronjob, see the
 
 <p><input type="checkbox" name="install_tracker" id="install_tracker" value="1" /><label for="install_tracker">Tracker</label></p> 
 
-<p><input type="checkbox" name="install_bridge" id="install_bridge" value="1" /><label for="install_bridge">Discussion Lists</label> <span class="alert">Requires Additional Configuration (cronjob)</span>	
+<p><input type="checkbox" name="install_bridge" id="install_bridge" value="1" /><label for="install_bridge">Bridge</label> <span class="alert">Requires Additional Configuration (cronjob)</span>	
 </p> 
 
 <p>
