This fixes a problem with the button to mass add subscribers, which wasn't owrking, as well as a problem with the installer - the WYSIWYG editor section wasn't functioning properly.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -598,7 +598,7 @@ editors also have the ability to make simple HTML tables for basic layouts.
 
 <p>
 	<p>
-		<input type="checkbox" name="install_wysiwyg_editors" id="install_wysiwyg_editors" value="1" checked="checked" class="radio_toggleDivs" data-target="install_wysiwyg_editors_options" />			
+		<input type="checkbox" name="install_wysiwyg_editors" id="install_wysiwyg_editors" value="1" checked="checked" />			
 	<label for="install_wysiwyg_editors">Install and Configure WYSIWYG Editors</label>
 	</p>
 	
