Getting ready for a v6.0.0 release (alpha)

--- a/dada/templates/new_list_screen.tmpl
+++ b/dada/templates/new_list_screen.tmpl
@@ -72,7 +72,7 @@
 		<p>The Mailing List Name cannot contain, &lt;'s, &gt;'s or, &quot;'s.</p>
 		
 		</div>
-	 <p><label for="list_name">Mailing List Name:</label<br/>
+	 <p><label for="list_name">Mailing List Name:</label><br/>
 	  <input type="text" id="list_name" name="list_name" value="<!-- tmpl_var list_name escape="HTML" -->" class="full" maxlength="250" />
 	 </p>
 </fieldset> 
