Changing some of the URLs to images Dada Mail uses to the actual, static path, rather than the old path_info way of things.

--- a/dada/templates/adv_archive_options_screen.tmpl
+++ b/dada/templates/adv_archive_options_screen.tmpl
@@ -445,27 +445,27 @@ Email Address Protection
 	<!-- this has to be updated... --> 
        <ul class="archive_badges_ul">
         <li class="archive_badges_li">
-        <img src="<!-- tmpl_var PROGRAM_URL -->/img/badge_delicious.png/" style="border:0px;padding:5px" title="Add to: del.icio.us" />
+        <img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/badge_delicious.png" style="border:0px;padding:5px" title="Add to: del.icio.us" />
         </li>
         
         <li class="archive_badges_li">
-        <img src="<!-- tmpl_var PROGRAM_URL -->/img/badge_digg.png/" style="border:0px;padding:5px" title="Add to: digg" />
+        <img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/badge_digg.png" style="border:0px;padding:5px" title="Add to: digg" />
         </li>
         
         <li class="archive_badges_li">
-        <img src="<!-- tmpl_var PROGRAM_URL -->/img/badge_newsvine.png/" style="border:0px;padding:5px" title="Add to: newsvine" />
+        <img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/badge_newsvine.png" style="border:0px;padding:5px" title="Add to: newsvine" />
         </li>
         
         <li class="archive_badges_li">
-        <img src="<!-- tmpl_var PROGRAM_URL -->/img/badge_reddit.png/" style="border:0px;padding:5px" title="Add to: reddit" />
+        <img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/badge_reddit.png" style="border:0px;padding:5px" title="Add to: reddit" />
         </li>
         
         <li class="archive_badges_li">
-        <img src="<!-- tmpl_var PROGRAM_URL -->/img/badge_yahoo.png/" style="border:0px;padding:5px" title="Add to: Y!" />
+        <img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/badge_yahoo.png" style="border:0px;padding:5px" title="Add to: Y!" />
         </li>
         
         <li class="archive_badges_li">
-        <img src="<!-- tmpl_var PROGRAM_URL -->/img/badge_magnolia.png/" style="border:0px;padding:5px" title="Add to: magnolia" />
+        <img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/badge_magnolia.png" style="border:0px;padding:5px" title="Add to: magnolia" />
         </li>
        </ul> 
        
