--- a/dada/templates/what_is_dada_mail.tmpl
+++ b/dada/templates/what_is_dada_mail.tmpl
@@ -5,7 +5,7 @@
 <h1>Dada Mail - Write Once: Distribute Everywhere </h1>
 
 <p>
-	<a href="http://dadamailproject.com/download" title="Click to download Dada Mail! (a free download!)"><img src="<!-- tmpl_var PROGRAM_URL -->/img/dada_mail_screenshot.jpg" style="border: 1px solid black;" border="0" height="345" width="500" alt="Dada Mail"></a> 
+	<a href="http://dadamailproject.com/download" title="Click to download Dada Mail! (a free download!)"><img src="<!-- tmpl_var SUPPORT_FILES_URL -->/images/dada_mail_screenshot.jpg" style="border: 1px solid black;" border="0" height="345" width="500" alt="Dada Mail"></a> 
 </p>
 
 <p>		
