Minor tweak on the sending monitor screen - the "messages/hour" number is always WAY off, if the # of messages sent out is low. So, now we wait until 10 messages are sent out, before showing the calculation.

--- a/dada/templates/sending_monitor_screen.tmpl
+++ b/dada/templates/sending_monitor_screen.tmpl
@@ -155,12 +155,14 @@
 	
 	
 			      </h3>
-    
-				<h3>
-				<!-- tmpl_if hourly_rate --> 
-				 Average Sending Rate: <!-- tmpl_var hourly_rate --> messages/hour
-				<!-- /tmpl_if -->
-			</h3> 
+    			<!-- hourly rate estimations are way off, with a small sample size... -->
+				<!-- tmpl_if expr="total_sent_out > 9" --> 
+					<h3>
+						<!-- tmpl_if hourly_rate --> 
+					 		Average Sending Rate: <!-- tmpl_var hourly_rate --> messages/hour
+						<!-- /tmpl_if -->
+					</h3>
+				<!-- /tmpl_if -->  
 	
 
 		 	<h3> 
