Removed the embedded pod in the Config.pm and moved it to its own pod file, "global_variables.pod"

--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -1,6 +1,10 @@
 #---------------------------------------------------------------------#
 # Dada Mail Outside Config File! (.dada_config)
-
+#
+#         Dada Mail Global Variables Configuration Guide: 
+#
+#         http://dadamailproject.com/d/global_variables.pod.html
+#
 #---------------------------------------------------------------------#
 # The location of your .dada_config directory: 
 #
@@ -12,7 +16,7 @@ $DIR = '<!-- tmpl_var dada_files_dir -->';
 $PROGRAM_URL = '<!-- tmpl_var PROGRAM_URL -->';
 
 #---------------------------------------------------------------------#
-# The location of static, support files
+# The location (server path + URL) of static, support files
 #
 $SUPPORT_FILES = { 
 	dir => '<!-- tmpl_var support_files_dir_path -->', 
