--- a/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
+++ b/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
@@ -1,11 +1,11 @@
 <!-- begin installer_extra_javascript_widget.tmpl --> 
 
 <!-- jQuery -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
+<script src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-jquery-1.8.2.min.js"></script>
 <script>
 	var $jq = jQuery.noConflict();
 </script> 
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.js"></script>
+<script src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-jquery-ui.js"></script>
 <script src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-dada_mail.js" type="text/javascript"></script>
 	
 <!-- end installer_extra_javascript_widget.tmpl -->
