--- a/dada/installer-disabled/templates/cl_quickhelp_scrn.tmpl
+++ b/dada/installer-disabled/templates/cl_quickhelp_scrn.tmpl
@@ -9,18 +9,9 @@ REQUIRED
 
 --program_url
 --dada_root_pass
+--support_files_dir_path
+--support_files_dir_url
 --dada_files_loc
 --backend
 
-OPTIONAL 
-
---sql_server
---sql_port
---sql_database
---sql_username
---sql_password
-
---dada_files_dir_setup 
---skip_configure_SQL
---skip_configure_dada_files
 
